# babytorch

./: README.md  UCC_coments_classification.ipynb  main.py  pyproject.toml  setup.py
minitorch/activations/: activations.py
minitorch/autograd/: autograd.py
minitorch/dataloaders/: dataloader.py
minitorch/layers/: layers.py
minitorch/losses/: losses.ipynb  losses.py
minitorch/nn/: layers.py
minitorch/optimizers/: optim.py
minitorch/quantization/: quantization.py
minitorch/tensor/: ops.py  readme.md  tensor.ipynb  tensor.py  value.py
minitorch/train/: training.py
minitorch/transform/: helpers.py  transform.py
minitorch/zexamples/loan_default/notebooks/: data_ingestion_tests.ipynb
minitorch/zexamples/loan_default/src/components/: data_ingestion.py
mytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: activations_test.ipynb  autograd_tests.ipynb  dataloader_tests.ipynb  layer_tests.ipynb  optimizers_test.ipynb  tensor_tests.ipynb  tests.py  training_tests.ipynb  transfrom_test.ipynb  value_test.ipynb
