[project]
name = "mytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.17"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "minitorch>=0.1.0",
    "numpy>=2.2.6",
    "pillow>=12.1.0",
    "requests>=2.32.5",
    "sns>=0.1",
]
